--- a/frontend/main/templates/principal.html
+++ b/frontend/main/templates/principal.html
@@ -45,7 +45,7 @@
               </ul>
             </li>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Buscar bolsones" aria-label="search">
+              <input class="form-control me-2 ms-2" type="search" placeholder="Buscar bolsones" aria-label="search">
               <button class=" me-3 btn btn-outline-dark" type="submit">Buscar</button>
             </form>
             <li class="nav-item me-3">
@@ -65,9 +65,9 @@
     
 
 
-    <div class="row mt-5 ms-5 row-cols-2 row-cols-lg-4 g-2 g-lg-3">
+    <div class="row mt-5 ms-5 row-cols-2 row-cols-lg-4 g-2 g-lg-3 me-5 mb-5">
       <div class="col col-md-2 col-sm-6">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="col col-md-2 col-sm-6">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div><div class="col col-md-2 col-sm-6">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
@@ -95,7 +95,7 @@
           </div>
         </div>
       </div><div class="col col-md-2">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
@@ -104,7 +104,7 @@
           </div>
         </div>
       </div><div class="col col-md-2">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
@@ -113,7 +113,67 @@
           </div>
         </div>
       </div><div class="col col-md-2">
-        <div class="card p-3">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
+          <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Bolson</h5>
+            <p class="card-text">$123</p>
+            <a href="#" class="btn btn-primary">Ver</a>
+          </div>
+        </div>
+      </div>
+      <div class="col col-md-2 col-sm-6">
+        <div class="card p-3 border-dark">
           <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Bolson</h5>
