--- a/frontend/main/templates/inicio_sesion.html
+++ b/frontend/main/templates/inicio_sesion.html
@@ -24,15 +24,7 @@
               
               
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Productos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Frutas</a></li>
-                  <li><a class="dropdown-item" href="#">Verduras</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Ver todos</a></li>
-                </ul>
+                <a class="nav-link active" href="#" role="button" ari>Productos</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -41,8 +33,6 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Todos</a></li>
                   <li><a class="dropdown-item" href="#">En ofertas</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Armá tu bolson</a></li>
                 </ul>
               </li>
               <form class="d-flex">
