--- a/frontend/main/templates/inicio_sesion.html
+++ b/frontend/main/templates/inicio_sesion.html
@@ -2,52 +2,10 @@
 
 {% block content %}
 
-    <nav class="navbar navbar-expand-lg navbar-dark color">
-        <div class="container">
-          <a class="navbar-brand" href="#">Bolsones</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-              
-              
-              <li class="nav-item dropdown">
-                <a class="nav-link active" href="#" role="button" ari>Productos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Bolsones
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Todos</a></li>
-                  <li><a class="dropdown-item" href="#">En ofertas</a></li>
-                </ul>
-              </li>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Buscar bolsones" aria-label="search">
-                <button class=" me-3 btn btn-outline-dark" type="submit">Buscar</button>
-              </form>
-              <li class="nav-item me-3">
-                <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
-              </li>
-              <li class="nav-item">
-                <button class="btn btn-warning" href="#" tabindex="-1" aria-disabled="true">Registrarse</button>
-              </li>
-              <li class="nav-item ms-3">
-                <a class="nav-link active" aria-current="page" href="#">Mis compras</a>
-              </li>
-            </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-      
-
       <div class="container">
 
         <div class="row d-flex justify-content-center">
-            <div class="col-md-4 color p-4 mt-5 rounded text-white">
+            <div class="col-md-4 color p-4 mt-5 rounded text-dark">
                 <form class=""> 
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
