--- a/frontend/main/templates/main.html
+++ b/frontend/main/templates/main.html
@@ -8,8 +8,9 @@
     {% block head %}
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="{{url_for("")}}"> -->
+    <!-- <link rel="stylesheet" href="#"> -->
     {% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
   </head>
 
@@ -42,7 +43,7 @@
                 Bolsones
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{{url_for('main.principal.html')">Todos</a></li>
+                <li><a class="dropdown-item" href="#">Todos</a></li>
                 <li><a class="dropdown-item" href="#">En ofertas</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#"></a></li>
@@ -53,10 +54,10 @@
               <button class=" me-3 btn btn-outline-dark" type="submit">Buscar</button>
             </form>
             <li class="nav-item me-3">
-              <a class="nav-link active" aria-current="page" href="{{url_for('main.inicio_sesion.html')}}">Iniciar sesion</a>
+              <a class="btn btn-colorbtn" aria-current="page" href="{{url_for('main.login')}}">Iniciar sesion</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-warning" href="{{url_for('main.registro.html')}}" tabindex="-1" aria-disabled="true">Registrarse</a>
+              <a class="btn btn-warning" href="{{url_for('main.register')}}" tabindex="-1" aria-disabled="true">Registrarse</a>
             </li>
             <li class="nav-item ms-3">
               <a class="nav-link active" aria-current="page" href="#">Mis compras</a>
