--- a/frontend/main/templates/inicio_sesion.html
+++ b/frontend/main/templates/inicio_sesion.html
@@ -5,7 +5,7 @@
       <div class="container">
 
         <div class="row d-flex justify-content-center">
-            <div class="col-md-4 color p-4 mt-5 rounded text-dark">
+            <div class="col-md-4 color p-4 mt-5 rounded text-white">
                 <form class=""> 
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
