--- a/frontend/main/templates/main.html
+++ b/frontend/main/templates/main.html
@@ -19,36 +19,12 @@
     {%block menu%}
     <nav class="navbar navbar-expand-lg navbar-dark color">
       <div class="container">
-        <a class="navbar-brand" href="#">Bolsones</a>
+        <a class="navbar-brand" href="{{url_for('main.index')}}">Bolsones</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-
-
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Productos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Frutas</a></li>
-                <li><a class="dropdown-item" href="#">Verduras</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Ver todos</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Bolsones
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Todos</a></li>
-                <li><a class="dropdown-item" href="#">En ofertas</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#"></a></li>
-              </ul>
-            </li>
             <form class="d-flex">
               <input class="form-control me-2 ms-2" type="search" placeholder="Buscar bolsones" aria-label="search">
               <button class=" me-3 btn btn-outline-dark" type="submit">Buscar</button>
@@ -59,11 +35,10 @@
             <li class="nav-item">
               <a class="btn btn-warning" href="{{url_for('main.register')}}" tabindex="-1" aria-disabled="true">Registrarse</a>
             </li>
-            <li class="nav-item ms-3">
+            <!-- <li class="nav-item ms-3">
               <a class="nav-link active" aria-current="page" href="#">Mis compras</a>
-            </li>
+            </li> -->
           </ul>
-          </div>
         </div>
       </div>
     </nav>
