--- a/frontend/main/templates/registro.html
+++ b/frontend/main/templates/registro.html
@@ -10,7 +10,7 @@
                 <form class=""> 
                     <div class="mb-3">
                       <label for="exampleInputFirstname1" class="form-label"> Nombre</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese Nombre">
+                      <input type="" class="form-control" id="exampleInputFirstname1" placeholder="Ingrese Nombre">
                     </div>
                     <div class="mb-3">
                       <label for="exampleInputLastname1" class="form-label">Apellido</label>
