--- a/frontend/main/templates/macros/form_macros.html
+++ b/frontend/main/templates/macros/form_macros.html
@@ -1,31 +1,28 @@
+<!-- Muestra errores de validación -->
 {% macro show_error(field) %}
-
     {% if field.errors %}
-
         <div class="alert alert-danger" role="alert">
-
             {% for error in field.errors %}
-
                 {{ error }}<br/>
-
             {% endfor %}
-
         </div>
-
     {% endif %}
-
 {% endmacro %}
 
+<!-- Muestra campos del formulario -->
 {% macro show_field(field) %}
-
         {{ field.label }}
         {{ field(**kwargs)|safe }}
         {{ show_error(field) }}
-
 {% endmacro %}
 
+<!-- Muestra campos del formulario -->
+{% macro show_field_login(field) %}
+	{{ field(**kwargs)|safe }} <!-- Mostrar campo -->
+	{{show_error(field)}}  <!-- Llamar a macro que muestra el error -->
+{% endmacro %}
+
+<!-- Muestra campos tipo submit -->
 {% macro show_submit(field) %}
-
         {{ field(**kwargs)|safe }}
-
 {% endmacro %}
