--- a/frontend/main/templates/main.html
+++ b/frontend/main/templates/main.html
@@ -33,10 +33,8 @@
               <a class="btn btn-colorbtn" aria-current="page" href="{{url_for('main.login')}}">Iniciar sesion</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-warning" href="#" tabindex="-1" aria-disabled="true">Registrarse</a>
+              <a class="btn btn-warning" href="{{url_for('main.register')}}" tabindex="-1" aria-disabled="true">Registrarse</a>
             </li>
-            <!-- <li class="nav-item ms-3">
-              <a class="nav-link active" aria-current="page" href="#">Mis compras</a>
             </li> -->
           </ul>
         </div>
