--- a/frontend/main/templates/vista-detallada.html
+++ b/frontend/main/templates/vista-detallada.html
@@ -1,7 +1,6 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
 <div class="class container justify-content-center mt-5">
   <div class="card" style="width: 18rem;">
     <img src="..." class="card-img-top" alt="...">
@@ -12,5 +11,5 @@
     </div>
   </div>
 </div>
+{% endblock %}
 
-{% endblock %
