--- a/frontend/main/templates/main.html
+++ b/frontend/main/templates/main.html
@@ -1,68 +1,55 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     {% block head %}
     <!-- Bootstrap CSS -->
+    <title id="Venta de bolsones"></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="#"> -->
-    {% endblock %}
     <link rel="stylesheet" href="{{ url_for('static', filename='/css/styles.css') }}">
-
+    {% endblock %}
   </head>
 
-  <body class=" success ">
-
+  <body>
     {%block menu%}
     <nav class="navbar navbar-expand-lg navbar-dark color">
-      <div class="container">
-        <a class="navbar-brand" href="{{url_for('main.index')}}">Bolsones</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-            <form class="d-flex">
-              <input class="form-control me-2 ms-2" type="search" placeholder="Buscar bolsones" aria-label="search">
-              <button class=" me-3 btn btn-outline-dark" type="submit">Buscar</button>
-            </form>
-            <li class="nav-item me-3">
-              <a class="btn btn-colorbtn" aria-current="page" href="{{url_for('main.login')}}">Iniciar sesion</a>
-            </li>
-            <li class="nav-item">
-              <a class="btn btn-warning" href="{{url_for('main.register')}}" tabindex="-1" aria-disabled="true">Registrarse</a>
-            </li>
-            </li> -->
-          </ul>
-        </div>
+      <div class="container ms-1 me-1">
+        <a class="navbar-nav btn btn-navbar ms-3" href="{{url_for('main.index')}}">Inicio</a>
+        <a class="navbar-nav btn btn-navbar ms-4" href="#">Bolsones</a>
+        <ul class="navbar-nav mb-lg-0 ms-auto">
+          <li class="nav-item">
+            <a class="btn btn-color" href="{{url_for('main.login')}}">Iniciar sesion</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-warning" href="{{url_for('main.register')}}">Registrarse</a>
+          </li>
+        </ul>
       </div>
     </nav>
-
     {%endblock %}
 
+    
     {% block content %}
 
     {% endblock %}
 
 
-    
+  <footer>
+    {% block footer %}
+    <div class="navbar navbar-expand-lg color">
+      <div class="container">
+        <a class="navbar-brand btn btn-navbar" href="#">Seguinos</a>
+        <a class="navbar-brand btn btn-navbar" href="mailto:d.arenas@alumno.um.edu.ar">Contactanos</a>
+        <p>Copyright</p>
+      </div>
+    </div>
+    {% endblock %}
+  </footer>
 
     {% block scripts %}
-    <!-- Optional JavaScript; choose one of the two! -->
-
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
-    -->
-
     <script src="https://kit.fontawesome.com/9789745169.js" crossorigin="anonymous"></script>
     {% endblock %}
 
