--- a/frontend/main/templates/macros/bolsones.html
+++ b/frontend/main/templates/macros/bolsones.html
@@ -4,24 +4,14 @@
   <div>
     <ul class="list-unstyled">
       <li class="p-2">
-        <img class="img-fluid" src="https://via.placeholder.com/100x100">
-      </li>
-      <li class="p-2">
-        <img class="img-fluid" src="https://via.placeholder.com/100x100">
-      </li>
-      <li class="p-2">
-        <img class="img-fluid" src="https://via.placeholder.com/100x100">
+        <img class="img-fluid" src="https://via.placeholder.com/400x400">
       </li>
     </ul>
-  </div>
-  <div class="p-2">
-    <img class="img-fluid" src="https://via.placeholder.com/100x100">
   </div>
 </div>
 <div class="col-md-3 col-sm-1 d-flex p-2 bd-highlight">
     <div>
       <h3>{{bolson.nombre}}</h3>
-      <h1>{{bolson.precio}}</h1>
       <h5>Productos que contiene:</h5>
       {% if bolson.productos %}
         <table class="table align-middle">
@@ -69,7 +59,6 @@
     <img src="https://via.placeholder.com/100x100" class="card-img-top" alt="imagen bolson">
     <div class="card-body">
       <h5 class="card-title">{{bolson.nombre}}</h5>
-      <p class="card-text">{{bolson.precio}}</p>
         <div class="d-grid gap-2">
           <a href="#" class="btn btn-primary">Ver</a>
         </div>
@@ -87,13 +76,7 @@
   {% if bolson.aprobado %}
   <td style="color:green">Si</td>
   {% else %}
-  <td style="color:yellow">No</td> 
-  {% endif %}
-  <td>{{bolson.precio}}</td>
-  {% if user.is_authenticated and user.role == 'admin' %}
-  <td><a href="#" class="btn btn-primary">Ver</a></td>
-  {% else %}
-  <td><a href="#" class="btn btn-primary">Ver</a></td>
+  <td style="color:red">No</td> 
   {% endif %}
 </tr>
 {% endmacro %}
@@ -103,7 +86,6 @@
   <th>{{bolson.nombre}}</th>
   <td>{{bolson.fecha}}</td>
   <td style="color:yellow">No</td>
-  <td>{{bolson.precio}}</td>
   <td><a href="#" class="btn btn-primary">Ver</a></td>
   <td>
     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
