--- a/frontend/main/templates/inicio_sesion.html
+++ b/frontend/main/templates/inicio_sesion.html
@@ -1,21 +1,34 @@
 {% extends 'main.html' %}
+{% from 'macros/form_macros.html' import show_field, show_submit %}
 
 {% block content %}
       <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-md-4 color p-4 mt-5 rounded text-white">
-                <form class=""> 
+                <form class="" action="{{url_for('main.login')}}" method="POST"> 
+                  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+
                       <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese correo electrónico">
+                        <!-- <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese correo electrónico"> -->
+
+                        {{ show_field(form.email, class='form-control', placeholder='Ingrese correo electronico') }}
+
                       </div>
                       <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese contraseña">
+                        <!-- <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese contraseña"> -->
+
+                        {{ show_field(form.password, class='form-control', placeholder='Ingrese contraseña') }}
+
+
                       </div>
                     <div class="d-grid">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <!-- <button type="submit" class="btn btn-primary">Enviar</button> -->
+                        {{ show_submit(form.submit, class='btn btn-primary', value='Iniciar sesion') }}
                     </div>
+
+
                   </form> 
             </div>
         </div>
